<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#d7ccc8"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="10dp"
    >

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:cropToPadding="true"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/anypict"
        app:layout_constraintBottom_toTopOf="@id/chbFavorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clBars"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clBars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/chbFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPhoto"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@id/tvName"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/_35"
            app:layout_constraintBottom_toTopOf="@id/tvCity"
            app:layout_constraintTop_toBottomOf="@id/tvID" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:maxLines="1"
            android:text="@string/anycity"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tvCost"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/cost"
            app:layout_constraintBottom_toTopOf="@id/tvDescription"
            app:layout_constraintTop_toBottomOf="@id/tvCity" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:scrollbars="vertical"
            android:text="@string/bla"
            app:layout_constraintBottom_toTopOf="@id/tvAvailable"
            app:layout_constraintTop_toBottomOf="@id/tvCost" />

        <TextView
            android:id="@+id/tvAvailable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />
    </android.support.constraint.ConstraintLayout>

    <CheckBox
        android:id="@+id/chbFavorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/favorite"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto" />
</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>